force-app/main/default/objects/Opportunity/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR 7 OR (8 AND 9)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Offices</value>
        </filterItems>
        <filterItems>
            <field>Center__c.Unit_Record_Type__c</field>
            <operation>contains</operation>
            <value>Offices</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>Center__c.Unit_Record_Type__c</field>
            <operation>contains</operation>
            <value>Residential</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Retail</value>
        </filterItems>
        <filterItems>
            <field>Center__c.Unit_Record_Type__c</field>
            <operation>contains</operation>
            <value>Retail</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Special Leasing</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Residential Property</value>
        </filterItems>
        <filterItems>
            <field>Center__c.Unit_Record_Type__c</field>
            <operation>equals</operation>
            <value>Residential</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Center__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Deals</relationshipName>
    <type>Lookup</type>
</CustomField>