force-app/main/default/objects/Opportunity/fields/Submitted_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitted By Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>DealsSubmittedBy</relationshipName>
    <type>Lookup</type>
</CustomField>