force-app/main/default/objects/Opportunity/fields/Tenant_s_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>Tenant_s_Representative_Name__c</fullName>
    <label>Tenant&apos;s Representative Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>