force-app/main/default/objects/Opportunity/fields/Term_of_Lease_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_of_Lease_Months__c</fullName>
    <label>Term of Lease (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>