force-app/main/default/objects/Opportunity/fields/Terrace_Area_SAR__c.field-meta.xml
<CustomField>
    <fullName>Terrace_Area_SAR__c</fullName>
    <label>Terrace Area SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>