force-app/main/default/objects/Opportunity/fields/Total_Annual_Rent__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Rent__c</fullName>
    <label>Total Annual Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>