force-app/main/default/objects/Opportunity/fields/Total_Asking_Rent_SR__c.field-meta.xml
<CustomField>
    <fullName>Total_Asking_Rent_SR__c</fullName>
    <label>Total Asking Rent (SR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>