force-app/main/default/objects/Opportunity/fields/Total_Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value__c</fullName>
    <formula>IF(
    RecordType.DeveloperName = &apos;ResidentialProperty&apos;,
    TotalSellingPrice__c,
    Other_Charges_Amount__c +
    Payment_Schedule_Amount__c +
    IF(
        VAT_15__c,
        (Other_Charges_Amount__c + Payment_Schedule_Amount__c) * 15 / 100,
        0
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>