force-app/main/default/objects/Opportunity/fields/Total_Prices_Lobby_Areas__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Lobby_Areas__c</fullName>
    <label>Total Prices (Lobby Areas)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>