force-app/main/default/objects/Opportunity/fields/Total_Prices_Unit_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Prices_Unit_Area__c</fullName>
    <label>Total Prices (Unit Area)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>