force-app/main/default/objects/Opportunity/fields/TotalScheduledPayment__c.field-meta.xml
<CustomField>
    <fullName>TotalScheduledPayment__c</fullName>
    <label>Total Scheduled Payment</label>
    <summarizedField>Payment_Schedule__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_Schedule__c.Deal__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>