force-app/main/default/objects/Opportunity/fields/TotalSellingPrice__c.field-meta.xml
<CustomField>
    <fullName>TotalSellingPrice__c</fullName>
    <label>Total Selling Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>