force-app/main/default/objects/Opportunity/fields/Unit_Size_Sqm__c.field-meta.xml
<CustomField>
    <fullName>Unit_Size_Sqm__c</fullName>
    <label>Unit Size (Sqm)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>