force-app/main/default/objects/Opportunity/fields/VAT_15__c.field-meta.xml
<CustomField>
    <fullName>VAT_15__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VAT 15%</label>
    <type>Checkbox</type>
</CustomField>