force-app/main/default/objects/Opportunity/fields/X1st_Instalment_Deposit_SAR__c.field-meta.xml
<CustomField>
    <fullName>X1st_Instalment_Deposit_SAR__c</fullName>
    <label>1st Instalment Deposit SAR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>