force-app/main/default/objects/Opportunity/recordTypes/Offices.recordType-meta.xml
<RecordType>
    <fullName>Offices</fullName>
    <active>true</active>
    <businessProcess>Offices</businessProcess>
    <label>Offices</label>
</RecordType>