force-app/main/default/objects/Opportunity/recordTypes/Residential.recordType-meta.xml
<RecordType>
    <fullName>Residential</fullName>
    <active>true</active>
    <businessProcess>Offices</businessProcess>
    <label>Residential</label>
</RecordType>