force-app/main/default/objects/Opportunity/recordTypes/ResidentialProperty.recordType-meta.xml
<RecordType>
    <fullName>ResidentialProperty</fullName>
    <active>true</active>
    <businessProcess>Residential Property</businessProcess>
    <label>Residential Property</label>
</RecordType>