force-app/main/default/objects/Opportunity/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <label>Retail</label>
</RecordType>