force-app/main/default/objects/Opportunity/recordTypes/Special_Leasing.recordType-meta.xml
<RecordType>
    <fullName>Special_Leasing</fullName>
    <active>true</active>
    <businessProcess>Retail</businessProcess>
    <label>Special Leasing</label>
</RecordType>