force-app/main/default/objects/Opportunity/validationRules/AskingPriceNotLowerThanPreLaunchPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>AskingPriceNotLowerThanPreLaunchPrice</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Residential Property&apos;,
    NOT(ISNEW()),  
    ISCHANGED(TotalSellingPrice__c),
    NOT(ISBLANK(TotalSellingPrice__c)),    NOT(ISBLANK(PreLaunchPrice__c)),
    TotalSellingPrice__c &lt; PreLaunchPrice__c 
)</errorConditionFormula>
    <errorMessage>&quot;Total Selling Price&quot; cannot be less than the Deal Amount</errorMessage>
</ValidationRule>