force-app/main/default/objects/Opportunity/validationRules/Total_Annual_Rent_SRAnnum_notLessAmount.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Annual_Rent_SRAnnum_notLessAmount</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    RecordType.Name = &apos;Offices&apos;,
    TEXT(Price_Approval_Status__c) &lt;&gt; &apos;Approved&apos;,
    Total_Annual_Rent_SR_Annum__c &lt; Amount
    )</errorConditionFormula>
    <errorDisplayField>Total_Annual_Rent_SR_Annum__c</errorDisplayField>
    <errorMessage>Total Annual Rent (SR/Annum) cannot be less than the Deal Amount until it is approved!</errorMessage>
</ValidationRule>