force-app/main/default/objects/Opportunity/validationRules/TotalSellingPriceRequiredWhenPaymentPlan.validationRule-meta.xml
<ValidationRule>
    <fullName>TotalSellingPriceRequiredWhenPaymentPlan</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(PaymentPlan__c)),
    ISBLANK(TotalSellingPrice__c)
)</errorConditionFormula>
    <errorMessage>Total Selling Price is required when a Payment Plan is selected.</errorMessage>
</ValidationRule>